<resources>
    <string name="app_name">SmakWell</string>
    <string name="produccia">НАША ПРОДУКЦІЯ</string>
    <string name="benderyky">Бендерики</string>
    <string name="mlunci">Млинці</string>
    <string name="varenyky">Вареники</string>
    <string name="khinkali">Хінкалі</string>
    <string name="kotletu">Котлети</string>
    <string name="schnitzel">Шніцель</string>
    <string name="syrniki">Сирники</string>
    <string name="chebureki">Чебуреки</string>
    <string name="cabbage">Голубці</string>
    <string name="dumplings">Пельмені</string>
    <string name="lula_cebab">Люля-Кебаб</string>
    <string name="kushtuvav">НАЙСМАЧНІШЕ ЩО ТИ КУШТУВАВ</string>
    <string name="slogan">СМАЧНА ЕКОНОМІЯ ЧАСУ!</string>
    <string name="imglogo">https://www.smakwell.com/img/pages/main_page/logo.svg</string>
    <string name="imgBenderuku">https://www.smakwell.com/img/pages/main_page/categories_icon/benderiki.png</string>
    <string name="imgBenderuku2">https://www.smakwell.com/img/pages/benderiki_page/plate_benderiki.png</string>
    <string name="imgLula_cebab">https://www.smakwell.com/img/pages/main_page/categories_icon/lula-kebab.png</string>
    <string name="imgLula_cebab2">https://www.smakwell.com/img/pages/lula-kebab_page/plate_lula-kebab.png</string>
    <string name="imgDumplings">https://www.smakwell.com/img/pages/main_page/categories_icon/dumplings.png</string>
    <string name="imgDumplings2">https://www.smakwell.com/img/pages/main_page/plate_dumpling.png</string>
    <string name="imgCabbage">https://www.smakwell.com/img/pages/main_page/categories_icon/stuffed_cabbage.png</string>
    <string name="imgCabbage2">https://www.smakwell.com/img/pages/stuffed-cabbage_page/stuffed_cabbage.png</string>
    <string name="imgSyrniki">https://www.smakwell.com/img/pages/main_page/categories_icon/syrniki.png</string>
    <string name="imgSyrniki2">https://www.smakwell.com/img/pages/syrniki_page/plate_syriniki.png</string>
    <string name="imgChebureki">https://www.smakwell.com/img/pages/main_page/categories_icon/chebureki.png</string>
    <string name="imgChebureki2">https://www.smakwell.com/img/pages/cheburek_page/plate_chebureki.png</string>
    <string name="imgSchnitzel">https://www.smakwell.com/img/pages/main_page/categories_icon/schnitzel.png</string>
    <string name="imgSchnitzel2">https://www.smakwell.com/img/pages/schnitzel_page/schnitzel.png</string>
    <string name="imgKotletu">https://www.smakwell.com/img/pages/main_page/categories_icon/cutlets.png</string>
    <string name="imgKotletu2">https://www.smakwell.com/img/pages/cutlets_page/plate_cutlets.png</string>
    <string name="imgKhinkali">https://www.smakwell.com/img/pages/main_page/categories_icon/khinkali.png</string>
    <string name="imgKhinkali2">https://www.smakwell.com/img/pages/khinkali_page/plate_khinkali.png</string>
    <string name="imgVarenyky">https://www.smakwell.com/img/pages/main_page/categories_icon/vareninki.png</string>
    <string name="imgVarenyky2">https://www.smakwell.com/img/pages/vareniki_page/plate_vareniki.png</string>
    <string name="imgMlunci">https://www.smakwell.com/img/pages/main_page/categories_icon/pancakes.png</string>
    <string name="imgMlunci2">https://www.smakwell.com/img/pages/pancakes_page/plate_pancakes.png</string>
    <string name="lula_cebab_descr">З баранини, курдючного сала, цибулі та спецій готують фарш, який
            добре вимішують (близько 15 хвилин) до отримання в\'язкої консистенції. Заправляють спеціями і охолоджують.
            Формують «котлетки», нанизують на шампур і рівномірно розподіляють по ньому. Шампури для люля-кебаб повинні
            бути ширше звичайних. Обсмажують на мангалі або грилі, періодично перевертаючи. За традицією люля-кебаб
            подають на прісної коржику (лаваші), з кільцями цибулі, зеленню, сумахом і смаженими на вугіллі помідорами.
        </string>
    <string name="dumplings_descr">Нашу кухню неможливо уявити собі без такого традиційної страви як пельмені. Они всегда выручают, когда нет времени готовить. Назва «пельмені» взяли тільки в 19 столітті, коли люди стали активно налагоджувати зв\'язки між різними областями і подорожувати. В результаті пельмені придбали єдиний вигляд, назву і просто полюбилися вихідцям з усіх регіонів. Продовжуючи цю кулінарну традицію - ми даруємо можливість споживати гідні пельмені!</string>
    <string name="cabbage_descr">Голубці - одне з традиційних українських страв.
            По суті це капустяні рулети, начинені фаршем з рису і м\'яса, тушковані в томатному соусі. Завдяки такому
            поєднанню продуктів голубці мають відмінні смакові якості. Блюдо входить до переліку традиційних частувань
            багатьох країн, особливе місце вони займають в кухнях Кавказу і Західної Азії, а також деяких країн Східної
            Європи. Залежно від географії варіюються і начинки.

            «Ледачі голубці» від SMAKWELL - страва дуже смачна,
            ситне, економне і цілком корисне. Можна сказати,
            що це одне з базових страв домашньої
            кухні на кожен день.
        </string>
    <string name="chebureki_descr">Чебуреки - явище, обділених заслуженим увагою.
            Чебуреки від SMAKWELL - це завжди хрустке тісто і соковита м\'ясна начинка.Приготовлені з тонкого тесту з
            дотриманням класичної рецептури.
    </string>
    <string name="syrniki_descr">
            Знаковий ранковий десерт! Блюдо по-особливому тепле, що викликає найприємніші асоціації. Сирники складаються з корисного продукту - сиру, багатого кальцієм і фосфором, магнієм і залізом, а також амінокислотами і вітамінами. Сир є найкориснішим молочнокислим продуктом, оскільки містить молочні жири, службовці резервними джерелами енергії. Смачно, корисно, а з сирниками від SMAKWELL - ще й швидко!
        </string>
    <string name="schnitzel_descr">Шніцель - традиційне блюдо австрійської кухні, самодостатнє і
            лаконічне, при цьому володіє чудовим смаком само по собі.

            Що відрізняє шніцель від інших відомих смажених м\'ясних страв?
            По-перше, він тонкий, по-друге, обов\'язково в паніровці, по-третє, смажиться шніцель неодмінно у великій
            кількості масла, практично у фритюрі, чому ще один його ознака - хрустка скоринка.
            Апетитний курячий шніцель - ідеальне рішення для обіду!
            </string>
    <string name="kotletu_descr">З кінця XIX і особливо з початку XX ст. котлетами в Україні все
            частіше стали називати вироби з меленого м\'яса, з фаршів, які в німецькій кухні називалися «м\'ясними кнелями»,
            а в старій російській - «битками» і готувалися з рубленого м\'яса.
            У французькій кухні натуральні відбивні котлети досі носять назву cote, тобто ребро, а то, що
            ми називаємо котлетами з меленого м\'яса, - фрикаделі, вони мають форму невеликих кульок. На сході
            такі круглі котлети здавна називалися «кюфта», в країнах Балкан котлети носять найменування «кіфтелуце».
        </string>
    <string name="khinkali_descr">Хінкалі - це любов!
            Найважливіше в цій грузинській страві - м\'ясо. У мішечок з тіста загортають тільки рубане м\'ясо, ні в якому
            разі не фарш, інакше це вже - НЕ хінкалі. Рубане м\'ясо дозволяє зберегти в собі весь сік, який є невід\'ємною
            частиною страви.
            Хінкалі від SMAKWELL - не обов\'язково їхати в Грузію, щоб спробувати гордість грузинської кухні!
        </string>
    <string name="varenyky_descr">Приготовлені з натуральних інгредієнтів, вони бувають солодкі - з сиром, солоні - з сиром і кропом, а також всіма улюблені вареники з картоплею чи капустою. Головна відмінність вареників від усього іншого - це вже готова начинка. Вона повинна бути приготовлена до того, як її загорнутий в тісто. Звідси і назва «вареники». Ніжне тісто і соковита начинка приправлені натуральними спеціями, без підсилювачів смаку та консервантів, тільки природний і насичений смак - спробуйте!</string>
    <string name="mlunci_descr">Млинці завжди були традиційним ласощами нашого народу, для багатьох
            найулюбленішим і шанованим стравою, як за часів Київської Русі, так і зараз. Вони займали гідне місце на
            столі кожної господині, і вважаються одним з найперших борошняних страв. З\'явилися в раціоні наших предків
            приблизно в 9 столітті нашої ери.
        </string>
    <string name="bend_descr">
            Бендерики - це традиційне страва української кухні. Мають трикутну форму і відрізняються від налисників використанням свіжого фаршу. Одні кажуть, що назва цієї страви утворилос від міста Бендери, а в Одесі кажуть, що Остап Бендер. Страва смачна і цікава, хоча б через те, що не типов для української кухні, особливо це стосується використання сирої начинки. Це скоріше типово для татарської кухні. Так вийшов симбіоз, українських налисників і кримсько-татарських чебуреків. Мінімум часу і золотисті бендерики готові!
        </string>
    <string name="bgDescr">https://img.freepik.com/premium-photo/grunge-black-texture-background_49507-868.jpg?w=996</string>
    <string name="btnText"> До рецепту  </string>
    <string name="btnTextBackMenu"> Повернутися на головне меню </string>
    <string name="benderukuCooking"> https://smachnota.com.ua/components/com_jshopping/files/img_products/full_foto-benderiki-tvorog-zelen-5.jpg  </string>
    <string name="benderukuName1"> БЕНДЕРИКИ "ТРАДИЦІЙНІ" З М\'ЯСОМ КУРКИ </string>
    <string name="benderukuimgtype1"> https://znaj.ua/crops/a58eb1/620x0/1/0/2023/02/28/P2vvQV5nT3BewuCsScv1H8soyh6lKA770XevRdQH.png </string>
    <string name="benderukuCompound1">Тісто: борошно пшеничне в/г, яєчний порошок,  вода питна, цукор, молоко сухе збиране, сіль кухонна.\n\nНачинка жарена:  м’ясо куряче, шпик хребтовий, цибуля свіжа, соєве борошно текстуроване, сіль, перець, </string>
    <string name="benderukuCooking1">Заморожені бендерики підсмажують 7 хвилин до золотистої скоринки з олією на пательні, розігрітій до 150-160 ℃.
   <stong>Не допускається розморожування та повторне заморожування!</stong>
    </string>
    <string name="benderukuCinnict1">
        Білки - 8 г.\nЖири - 3,1 г.\nВуглеводи - 28 г.\nКалорійність - 173 ккал.\nЕнергетична цінність - 724 кДж</string>
    <string name="benderukuName2"> БЕНДЕРИКИ "СИТНІ" З М\'ЯСОМ ЯЛОВИЧИНИ ТА КУРКИ </string>
    <string name="benderukuimgtype2"> https://gordonua.com/img/article/16020/49_big.jpg </string>
    <string name="benderukuCooking2"> Заморожені бендерики підсмажують 7 хвилин до золотистої скоринки з олією на пательні, розігрітій до 150–160 ℃. Подають зі сметаною.</string>
    <string name="benderukuCompound2"> Тісто: борошно пшеничне в/г, яєчний порошок, вода питна, цукор, молоко сухе збиране, сіль кухонна.\n\nНачинка смажена: яловичина 1-го ґатунку, м\’ясо куряче, шпик хребтовий, цибуля свіжа, соєве борошно текстуроване, сіль, перець, Е- 621. </string>
    <string name="benderukuCinnict2">
         Білки - 12,7 г.\nЖири - 3,67 г.\nВуглеводи - 17,22 г.\nКалорійність - 193 ккал.\nЕнергетична цінність - 811 кДж</string>
    <string name="benderukuName3"> БЕНДЕРИКИ "УЛЮБЛЕНІ" З СИРОМ (СОЛОДКІ)</string>
    <string name="bendrukuCompound3">Тісто: борошно пшеничне в/г, яєчний порошок, вода питна, цукор, молоко сухе збиране, сіль кухонна.\n\nНачинка: сир кисломолочній 18%,продукт сирний кисломолочний, цукор, сіль кухонна.</string>
    <string name="benderukuCooking3">Заморожені бендерики підсмажують 7 хвилин до золотистої скоринки з олією на пательні, розігрітій до 150–160 ℃.</string>
    <string name="benderukuCinnict3">
        Білки - 10,02 г.\nЖири - 6,92 г.\nВуглеводи - 29,97 г.\nКалорійність - 200,96 ккал.\nЕнергетична цінність - 836 кДж
    </string>
    <string name="benderukuimgType3">https://content1.rozetka.com.ua/goods/images/big_tile/175235023.jpg</string>
    <string name="mlunciName1">МЛИНЦІ "ПАНСЬКІ" З ЯЛОВИЧОЮ ПЕЧІНКОЮ</string>
</resources>